# ai-agents-from-scratch

./: .gitignore  README.md  docker-compose.yml  go.mod  go.sum  individual-copy.go  main.py  pass-by-ref.go  pass-by-val.go  pyproject.toml  tempo.yml
agent-patterns/prompt-chaining/: go.mod
agent-patterns/routing/: go.mod
agents/: 1-data_extraction.py
agents/__marimo__/: 1-data_extraction.ipynb
data/tool_usage/BFCL_v3_irrelevance.hf/test/: data-00000-of-00001.arrow  dataset_info.json
data/tool_usage/BFCL_v3_multi_turn_base_multi_func_call.hf/test/: data-00000-of-00001.arrow  state.json
data/tool_usage/BFCL_v3_multi_turn_base_single_func_call.hf/test/: data-00000-of-00001.arrow  dataset_info.json
data/tool_usage/BFCL_v3_multi_turn_composite.hf/test/: state.json
data/tool_usage/BFCL_v3_multi_turn_long_context.hf/test/: data-00000-of-00001.arrow  state.json
data/tool_usage/BFCL_v3_multi_turn_miss_func.hf/test/: state.json
data/tool_usage/BFCL_v3_multi_turn_miss_param.hf/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/tool_usage/tau_long_context.hf/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/tool_usage/toolace_single_func_call_1.hf/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/tool_usage/toolace_single_func_call_2.hf/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/tool_usage/xlam_multiple_tool_multiple_call.hf/test/: data-00000-of-00001.arrow  state.json  (+1 more)
effective-agent-patterns/: README.md
effective-agent-patterns/prompt-chaining/: go.mod  go.sum  main.go
(+20 files in other folders)
