[project]
name = "ai-agents-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "google-genai>=1.23.0",
    "openai>=1.93.0",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "marimo>=0.14.13",
    "nbformat>=5.10.4",
    "ruff>=0.12.4",
]
